--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -2,10 +2,20 @@
     font-family: "Times New Roman", Times, serif;
     margin: 10px 0 10px 20px;
     display: flex;
-    align-items: center;
-    gap: 20px;
+    flex-direction: column;
+    justify-content: space-around;
     font-size: 18px;
     letter-spacing: 1.5px;
+
+    &__title {
+        font-weight: 500;
+        font-size: 22px;
+    }
+
+    &__links {
+        display: flex;
+        gap: 20px;
+    }
 
     &__link {
         text-decoration: none;
