[main] Move hook states from Autoclave Availability Check component to Load Entry From component

--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -1,6 +1,6 @@
 .button {
     background-color: #B5C2DF;
-    color:rgb(75, 75, 124);
+    color:#4b4b7c;
     width: auto;
     padding: 10px 20px;
     border-radius: 7px;
