--- a/src/components/load-entry-form/LoadEntryForm.scss
+++ b/src/components/load-entry-form/LoadEntryForm.scss
@@ -1,7 +1,7 @@
 .load-entry-form {
     background-color: #D9D9D9;
     border-radius: 7px;
-    margin: 5px;
+    margin-right: 5px;
     padding: 15px 0;
     width: 500px;
 
