[main] Added autoclave item entry flexibility to add multiple items in one input, seperated by commas.  If multiple items are listed, then quantity input is disabled and set to default

--- a/src/components/add-item-input/AddItemInput.scss
+++ b/src/components/add-item-input/AddItemInput.scss
@@ -15,11 +15,16 @@
             -webkit-appearance: none;
             margin: 0;
         }
+
+        &:disabled {
+            cursor: not-allowed;
+        }
     }
 
     &__name {
         border: none;
         width: 280px;
+        text-transform: capitalize;
     }
 
     &__quantity {
