[main] Added error handling for empty or invalid input fields when confim completion of loads in Active Loads page

--- a/src/components/load-completion-confirmation/LoadCompletionConfirmation.scss
+++ b/src/components/load-completion-confirmation/LoadCompletionConfirmation.scss
@@ -38,6 +38,14 @@
                 width: 100px;
             }
         }
+
+        &-has-error {
+            border: 1px solid red;
+
+            &[type="number"] {
+                border: 1px solid red;
+            }
+        }
     }
 
     &__button-actions {
