--- a/src/containers/active-loads/ActiveLoads.scss
+++ b/src/containers/active-loads/ActiveLoads.scss
@@ -2,22 +2,47 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding-top: 10px;
+
+    &__form {
+        width: 650px;
+        border-radius: 7px;
+        padding: 7px 0;
+        background-color: #D9D9D9;
+
+        h3 {
+            text-align: center;
+            margin-bottom: 10px;
+            font-style: italic;
+        }
+    }
+
+    &__list {
+        padding: 0 15px 10px 15px;
+
+        &-line-divider {
+            border-bottom: 1px dashed black;
+            margin: 10px 0;
+        }
+    }
 
     &__load-link {
-        display: block;
-        margin: 7px 0;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
         cursor: pointer;
-        background-color: #D9D9D9;
-        transition: background-color 0.3s;
         color: #3b3bbb;
         text-decoration: underline;
+        font-size: 17px;
+        margin-left: 7px;
+        font-style: italic;
+
+        &-container {
+            margin-bottom: 7px;
+        }
 
         &:hover {
             background-color: white;
+            border-radius: 7px;
+            padding: 3px 7px;
+            transition: background-color 0.3s;
         }
     }
 }
