[main] updated active load form styling in Active Loads page

--- a/src/containers/active-loads/ActiveLoads.scss
+++ b/src/containers/active-loads/ActiveLoads.scss
@@ -21,7 +21,7 @@
         padding: 0 15px 10px 15px;
 
         &-line-divider {
-            border-bottom: 1px dashed black;
+            border-bottom: 3px dotted #4b4b7c;
             margin: 10px 0;
         }
     }
