--- a/src/components/load-completion-confirmation/LoadCompletionConfirmation.scss
+++ b/src/components/load-completion-confirmation/LoadCompletionConfirmation.scss
@@ -1,9 +1,5 @@
 .load-completion-confirmation {
-    border: 1px solid black;
-    padding: 20px;
-    width: 500px;
-    background-color: #D9D9D9;
-    border-radius: 8px;
+    margin: 5px 35px 10px 35px;
 
     label {
         font-weight: bold;
@@ -14,6 +10,19 @@
     }
 
     &__input {
+        &-pass-status {
+            margin-bottom: 7px;
+
+            select {
+                border-radius: 7px;
+                border: none;
+                margin-left: 5px;
+                padding: 2px;
+                text-align: center;
+                width: 60px;
+            }
+        }
+
         &-notes {
             display: flex;
             flex-direction: column;
@@ -36,6 +45,20 @@
                 padding: 5px;
                 border: 1px black solid;
                 width: 100px;
+                margin-left: 7px;
+                border: none;
+                text-align: center;
+
+                &[type="number"] {
+                    -webkit-appearance: textfield;
+                    appearance: textfield;
+                }
+
+                &[type="number"]::-webkit-outer-spin-button,
+                &[type="number"]::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                }
             }
         }
 
@@ -49,7 +72,9 @@
     }
 
     &__button-actions {
-        margin-top: 15px;
+        border-top: 3px dotted #4b4b7c;
+        margin-top: 10px;
+        padding-top: 15px;
         display: flex;
         gap: 10px;
     }
