--- a/src/components/load-summary/LoadSummary.scss
+++ b/src/components/load-summary/LoadSummary.scss
@@ -1,5 +1,9 @@
 .load-summary {
-    border: 1px solid black;
-    padding: 10px;
-    width: 450px;
+    margin: 5px 35px 10px 35px;
+    border-bottom: 3px dotted #4b4b7c;
+    padding-bottom: 7px;
+
+    &__item {
+        margin-bottom: 3px;
+    }
 }
