[main] initial setup of Loads Report Query component for Loads Report page

--- a/src/components/load-completion-confirmation/LoadCompletionConfirmation.scss
+++ b/src/components/load-completion-confirmation/LoadCompletionConfirmation.scss
@@ -5,10 +5,6 @@
         font-weight: bold;
     }
 
-    span {
-        font-weight: normal;
-    }
-
     &__input {
         &-pass-status {
             margin-bottom: 7px;
@@ -30,12 +26,14 @@
 
             span {
                 font-size: 13px;
+                font-weight: normal;
             }
 
             textarea {
                 border-radius: 7px;
                 padding: 5px 10px;
                 height: 60px;
+                resize: none;
             }
         }
 
