--- a/src/components/loads-report-query/LoadsReportQuery.scss
+++ b/src/components/loads-report-query/LoadsReportQuery.scss
@@ -1,3 +1,30 @@
 .loads-report-query {
     
+    &__input {
+        display: flex;
+        margin-bottom: 10px;
+
+        label {
+            width: 120px;
+            text-align: right;
+            margin-right: 7px;
+        }
+
+        &-date {
+            border-radius: 7px;
+            text-align: center;
+            padding: 2px 5px;
+        }
+
+        &-select {
+            border-radius: 7px;
+            width: 50px;
+            text-align: center;
+            padding: 2px 5px;
+        }
+    }
+
+    &__button-actions {
+        padding-left: 7px;
+    }
 }
