--- a/src/containers/loads-report/LoadsReport.scss
+++ b/src/containers/loads-report/LoadsReport.scss
@@ -8,10 +8,10 @@
         border: 1px solid black;
         border-radius: 7px;
         background-color: #D9D9D9;
+        border: none;
     }
 
     &__summary-query {
-        margin-bottom: 10px;
-        padding: 10px;
+        padding: 15px;
     }
 }
