--- a/src/containers/loads-report/LoadsReport.scss
+++ b/src/containers/loads-report/LoadsReport.scss
@@ -14,4 +14,12 @@
     &__summary-query {
         padding: 15px;
     }
+
+    &__summary-results {
+        padding: 15px;
+    }
+
+    &__border-divider {
+        border-top: 3px dotted #4b4b7c;
+    }
 }
