--- a/src/containers/search/Search.scss
+++ b/src/containers/search/Search.scss
@@ -1,1 +1,70 @@
-  
+  .search {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+
+    &__container {
+        width: 500px;
+        border-radius: 7px;
+        background-color: #D9D9D9;
+        border: none;
+    }
+
+    &__query {
+        padding: 12px 15px;
+    }
+
+    &__input {
+        margin-bottom: 12px;
+        input {
+            margin-left: 7px;
+            border-radius: 7px;
+        }
+    }
+
+    &__button {
+        display: flex;
+        gap: 15px;
+        margin-bottom: 12px;
+
+        .search__no-result {
+            color: red;
+            font-weight: bold;
+        }
+    }
+
+    &__button--add-note {
+        display: flex;
+        justify-content: flex-end;
+        padding: 0 15px 10px 15px;
+        margin-bottom: 5px;
+    }
+
+    &__result {
+        padding: 12px 15px;
+        border-top: 2px solid #9A8E8E;
+
+        &--hidden {
+            display: none;
+        }
+    }
+
+    &__add-note {
+        display: flex;
+        flex-direction: column;
+        padding: 0 15px 10px 15px;
+        margin-top: 10px;
+
+        label {
+            margin-bottom: 7px;
+        }
+
+        textarea {
+            padding: 10px;
+            border-radius: 7px;
+            min-height: 70px;
+            resize: vertical;
+            border: none;
+        }
+    }
+  }
