[main] Added method to add notes to autoclave load in Search page

--- a/src/containers/search/Search.scss
+++ b/src/containers/search/Search.scss
@@ -33,9 +33,10 @@
         }
     }
 
-    &__button--add-note {
+    &__button--add-note-actions {
         display: flex;
         justify-content: flex-end;
+        gap: 15px;
         padding: 0 15px 10px 15px;
         margin-bottom: 5px;
     }
