--- a/src/containers/home-page/HomePage.scss
+++ b/src/containers/home-page/HomePage.scss
@@ -1,3 +1,23 @@
 .home-page {
     padding: 20px;
+    text-align: center;
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    p {
+        font-style: italic;
+        font-size: 17px;
+    }
+
+    ul {
+        text-align: left;
+    }
+
+    &__divider {
+        margin: 20px 0;
+        border-bottom: 2px solid #9A8E8E;
+    }
 }
