--- a/src/containers/home-page/HomePage.scss
+++ b/src/containers/home-page/HomePage.scss
@@ -2,6 +2,30 @@
     padding: 20px;
     text-align: center;
 
+    h3 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 7px;
+    }
+
+    &__toggle-button {
+        margin-left: 7px;
+        font-size: 12px;
+        padding: 5px 10px;
+        border-radius: 5px;
+        border: none;
+        background-color: #B5C2DF;
+        color: #4b4b7c;
+        box-shadow: 1px 1px 3px rgb(75, 75, 124);
+        cursor: pointer;
+
+        &:active {
+            box-shadow: none;
+            transform: translateY(2px);
+        }
+    }
+
     img {
         max-width: 100%;
         height: auto;
