--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,8 +1,18 @@
 .header {
+    display: flex;
+    padding: 5px 0;
+    background-color: white;
 
     &__logo {
         width: 120px;
         height: auto;
         margin: 0 10px;
+    }
+
+    &__title {
+        align-content: center;
+        font-size: 26px;
+        font-weight: 500;
+        margin-left: 10px;
     }
 }
