--- a/src/components/side-nav/SideNav.scss
+++ b/src/components/side-nav/SideNav.scss
@@ -1,5 +1,54 @@
 .side-nav {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    align-items: center;
+    background-color: #4191b5;
+    width: 100px;
+    min-height: 100vh;
+    border-left: 1px solid #4191b5;
+
+    &__page-link {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 3px;
+        align-items: center;
+        padding: 12px 0;
+        opacity: 80%;
+        width: 100%;
+        cursor: pointer;
+
+        &:link {
+            text-decoration: none;
+        }
+
+        &-icon {
+            width: 40px;
+            height: 40px;
+            opacity: 0.5;
+        }
+
+        &-label {
+            font-size: 15px;
+            text-align: center;
+            color: white;
+            font-style: none;
+            cursor: pointer;
+        }
+    }
+
+    &__page-link--active {
+            opacity: 100%;
+            background-color: white;
+
+        .side-nav__page-link {
+            &-icon {
+                opacity: 100%;
+            }
+
+            &-label {
+                color: black;
+            }
+        }
+    }
 }
