--- a/src/containers/home-page/HomePage.scss
+++ b/src/containers/home-page/HomePage.scss
@@ -2,11 +2,16 @@
     padding: 20px;
     text-align: center;
 
+    h2 {
+        margin-bottom: 12px;
+    }
+
     h3 {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 7px;
+        margin-bottom: 15px;
     }
 
     &__toggle-button {
