[main] updated Header and Side Nav position to be fixed at position when scrolling down the app

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,14 @@
 .app {
     &__main {
         display: flex;
-        border-top: 2px dotted #22739860;
+        position: relative;
+        top: 100px;
 
         &-content {
             width: 100%;
+            overflow-y: scroll;
+            position: relative;
+            margin-left: 100px;
         }
     }
 }
