--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,10 +2,16 @@
     display: flex;
     padding: 5px 0;
     background-color: white;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    border-bottom: 2px dotted #22739860;
+    height: 100px;
 
     &__logo {
+        align-self: center;
         width: 120px;
-        height: auto;
+        height: 80px;
         margin: 0 10px;
     }
 
