--- a/src/components/side-nav/SideNav.scss
+++ b/src/components/side-nav/SideNav.scss
@@ -6,6 +6,7 @@
     width: 100px;
     min-height: 100vh;
     border-left: 1px solid #4191b5;
+    position: fixed;
 
     &__page-link {
         display: flex;
